--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.2.0",
+    "konva": "^8.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.5",
+    "use-async-effect": "^2.2.7",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
