--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     "fix": "eslint src/ --fix && prettier --write src/"
   },
   "dependencies": {
-    "@pixi/app": "^7.2.2",
-    "@pixi/assets": "^7.2.2",
-    "@pixi/constants": "^7.2.2",
-    "@pixi/core": "^7.2.2",
-    "@pixi/display": "^7.2.2",
-    "@pixi/events": "^7.2.2",
-    "@pixi/extensions": "^7.2.2",
-    "@pixi/graphics": "^7.2.2",
-    "@pixi/math": "^7.2.2",
-    "@pixi/mesh": "^7.2.2",
-    "@pixi/mesh-extras": "^7.2.2",
-    "@pixi/particle-container": "^7.2.2",
-    "@pixi/sprite": "^7.2.2",
-    "@pixi/sprite-animated": "^7.2.2",
-    "@pixi/sprite-tiling": "^7.2.2",
-    "@pixi/text": "^7.2.2",
-    "@pixi/text-bitmap": "^7.2.2",
-    "@pixi/ticker": "^7.2.2",
-    "@pixi/utils": "^7.2.2",
+    "@pixi/app": "^7.2.3",
+    "@pixi/assets": "^7.2.3",
+    "@pixi/constants": "^7.2.3",
+    "@pixi/core": "^7.2.3",
+    "@pixi/display": "^7.2.3",
+    "@pixi/events": "^7.2.3",
+    "@pixi/extensions": "^7.2.3",
+    "@pixi/graphics": "^7.2.3",
+    "@pixi/math": "^7.2.3",
+    "@pixi/mesh": "^7.2.3",
+    "@pixi/mesh-extras": "^7.2.3",
+    "@pixi/particle-container": "^7.2.3",
+    "@pixi/sprite": "^7.2.3",
+    "@pixi/sprite-animated": "^7.2.3",
+    "@pixi/sprite-tiling": "^7.2.3",
+    "@pixi/text": "^7.2.3",
+    "@pixi/text-bitmap": "^7.2.3",
+    "@pixi/ticker": "^7.2.3",
+    "@pixi/utils": "^7.2.3",
     "@tauri-apps/api": "^1.2.0",
+    "chart.js": "^4.2.1",
     "lodash-es": "^4.17.21",
     "pixi-viewport": "^5.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "use-async-effect": "^2.2.7",
     "usehooks-ts": "^2.9.1"
@@ -42,22 +44,23 @@
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.15.6",
-    "@types/react": "^18.0.28",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.31",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-import-resolver-typescript": "^3.5.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.6",
-    "sass": "^1.59.3",
-    "typescript": "^5.0.2",
+    "prettier": "^2.8.7",
+    "sass": "^1.60.0",
+    "typescript": "^5.0.3",
     "vite": "^4.2.1"
   }
 }
