--- a/package.json
+++ b/package.json
@@ -47,11 +47,15 @@
     "chart.js": "^4.2.1",
     "lodash-es": "^4.17.21",
     "pixi-viewport": "^5.0.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "use-async-effect": "^2.2.7",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
