add better form

--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "@pixi/ticker": "^7.2.3",
     "@pixi/utils": "^7.2.3",
     "@tauri-apps/api": "^1.2.0",
+    "bootstrap": "^5.3.0",
     "chart.js": "^4.2.1",
     "lodash-es": "^4.17.21",
     "pixi-viewport": "^5.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
