--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "@pixi/text-bitmap": "^7.2.3",
     "@pixi/ticker": "^7.2.3",
     "@pixi/utils": "^7.2.3",
+    "@popperjs/core": "^2.11.8",
     "@tauri-apps/api": "^1.2.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.2.1",
+    "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
     "pixi-viewport": "^5.0.1",
     "primeicons": "^6.0.1",
@@ -61,6 +63,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.2.3",
+    "@types/file-saver": "^2.0.5",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.31",
